<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="#A5D6A7"
        android:layout_margin="24dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/end"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:text="@string/end"
            android:textColor="#FFFFFF"
            android:backgroundTint="#2E7D32"
            android:layout_marginBottom="16dp" />

        <!-- Поля ввода диапазона -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:weightSum="2">

            <EditText
                android:id="@+id/inputStart"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="@string/start_range"
                android:padding="12dp"
                android:background="#F1F1F1"
                android:layout_marginEnd="8dp"
                android:inputType="number" />

            <EditText
                android:id="@+id/inputEnd"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="@string/end_range"
                android:padding="12dp"
                android:background="#F1F1F1"
                android:inputType="number" />
        </LinearLayout>

        <!-- Кнопка "Очистить" -->
        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/clear"
            android:textColor="#FFFFFF"
            android:backgroundTint="#2E7D32"
            android:layout_marginBottom="16dp" />




            <Button
                android:id="@+id/btnTask1"
                android:layout_width="1000dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/task_1"
                android:textColor="#FFFFFF"
                android:backgroundTint="#2E7D32"
                android:layout_marginEnd="8dp" />







            <Button
                android:id="@+id/btnTask2"
                android:layout_width="322dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/task_2"
                android:textColor="#FFFFFF"
                android:backgroundTint="#2E7D32"
                android:layout_marginEnd="8dp" />
        <Button
            android:id="@+id/btnTask3"
            android:layout_width="322dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/task_3"
            android:textColor="#FFFFFF"
            android:backgroundTint="#2E7D32" />

            <Button
                android:id="@+id/btnTask4"
                android:layout_width="322dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:backgroundTint="#2E7D32"
                android:text="@string/task_4"
                android:textColor="#FFFFFF" />


        <!-- Логовый блок -->
        <TextView
            android:id="@+id/logTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F5F5F5"
            android:padding="12dp"
            android:text="@string/Operation_log"
            android:textColor="#000000"
            android:minHeight="120dp"
            android:layout_marginBottom="16dp" />

        <!-- Кнопка История -->
        <Button
            android:id="@+id/btnHistory"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/history"
            android:textColor="#FFFFFF"
            android:backgroundTint="#2E7D32" />
    </LinearLayout>
</ScrollView>